--- a/SAP Task List Maker/Properties/Resources.resx
+++ b/SAP Task List Maker/Properties/Resources.resx
@@ -121,17 +121,17 @@
   <data name="OPENICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\OPENICON.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Updated" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\EDIT2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Clear" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Clear (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="MeasurePointSmall" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MeasurePointSmall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="SAVEICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SaveIcon2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ExistingMeas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\existingmeas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="UGLLOGO_SMALL" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\UGL Logo AC1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Pencil" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\EDIT3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -139,14 +139,20 @@
   <data name="Expand" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\expand.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SAVEICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SaveIcon2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="EXCELICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\EXCELICON.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Updated" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\EDIT2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ExistingMeas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\existingmeas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DeExpand" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dexpand.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="UGLLOGO_LARGE" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\UGL Logo AC.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="NewMeas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\newmeas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -157,10 +163,10 @@
   <data name="SAPICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SAPICON.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="UGLLOGO_SMALL" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\UGL Logo AC1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="NEWICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NEWICON.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="UGLLOGO_LARGE" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\UGL Logo AC.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="NEWICON1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NEWICON1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
