--- a/SAP Task List Maker/Properties/Resources.resx
+++ b/SAP Task List Maker/Properties/Resources.resx
@@ -121,8 +121,14 @@
   <data name="OPENICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\OPENICON.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="NEWICON1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NEWICON1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Updated" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\EDIT2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="UPARROW" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\UPARROW.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Clear" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Clear (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -166,7 +172,7 @@
   <data name="NEWICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NEWICON.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="NEWICON1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NEWICON1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="DOWNARROW" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DOWNARROW.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
